--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
    <div class="main">
 
-    <h1 class="title">I FUCKING HATE THIS!</h1>
+    <h1 class="title">Trivia Game!</h1>
 
     <div class="btnContainer">
         <button type="button" class="startButton"><span>Start!</span></button>
