I got distracted by CSS what else is new

--- a/index.html
+++ b/index.html
@@ -9,9 +9,28 @@
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
 </head>
 <body>
+
+    <div class ="background">
+            <div class="stars"></div>
+            <div class="twinkling"></div>
+            <div class="twinkling2"></div>
+            
+
    <div class="main">
 
-    <h1 class="title">Trivia Game!</h1>
+    <div class="glowing">
+    <span>S</span>
+    <span>P</span>
+    <span>A</span>
+    <span>C</span>
+    <span>E</span>
+    <span>T</span>
+    <span>R</span>
+    <span>I</span>
+    <span>V</span>
+    <span>I</span>
+    <span>A</span>
+    </div>
 
     <div class="btnContainer">
         <button type="button" class="startButton"><span>Start!</span></button>
@@ -19,6 +38,7 @@
 
    </div>
 
+   </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/javascript/app.js"/></script>
