css looking real good

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
+    <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet"/>
+    <title>Space Trivia!</title>
 </head>
 <body>
 
@@ -19,11 +21,15 @@
    <div class="main">
 
     <div class="glowing">
+
     <span>S</span>
     <span>P</span>
     <span>A</span>
     <span>C</span>
     <span>E</span>
+    </div>
+
+    <div class="glowing2">
     <span>T</span>
     <span>R</span>
     <span>I</span>
