--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Space Trivia!</title>
+    <link rel="shortcut icon" type="image/ico" href="assets/images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
     <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet"/>
-    <title>Space Trivia!</title>
+    
 </head>
 <body>
 
